--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 title: Portafolio de Washington Olarte Velasquez
 description: Portafolio profesional con TDD y ORM en JSON
-theme: minima
+theme: jekyll-theme-time-machine
